# Mapping_Plat

./: .gitmodules  CMakeLists.txt  README.md  help.txt
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_coordinates.cpp  bench_graph.cpp  bench_kdtree.cpp  bench_kitti.cpp  bench_main.cpp
data/gis-cup/conf/: match.conf
data/hengfeng-li/conf/: match.conf  match_osm.conf
data/kubicka-et-al/conf/: match.conf  match_edges.conf
deploy/appimage/: package.sh
deploy/licenses/: update.sh
docs/: BENCHMARKS.md  MATCHING_ENGINE.md
docs/examples/: map_demo.html  workflow_report.json
python/: requirements.txt  visualize_map.py  visualize_pointcloud.py
src/: CMakeLists.txt
src/app/include/app/: match.hpp  options.hpp  prepare.hpp
src/app/src/app/: options.cpp  settings.cpp
test/: CMakeLists.txt  test_centerline.cpp  test_coordinates.cpp  test_crc32.cpp  test_frame_validator.cpp  test_ground_extraction.cpp  test_kdtree.cpp  test_kitti_reader.cpp  test_map_matching.cpp  test_workflow.cpp
tests/: CMakeLists.txt  algorithm_tests.cpp  matcher_tests.cpp  route_tests.cpp
tools/: CMakeLists.txt  kitti_osm_workflow.cpp
